# gamer-cm

./: .gitmodules  Cargo.toml  README.md  docker-compose.yml
migrations/: 20250506012059_create-community-and-player.sql
src/: main.rs
src/application/interfaces/: mod.rs  result_get_communities_interface.rs  result_get_community_by_id_interface.rs  result_get_community_interface.rs  result_get_party_interface.rs
src/application/use_cases/: add_player_into_community_use_case.rs  add_players_into_team_use_case.rs  add_team_into_community_use_case.rs  create_community_use_case.rs  create_party_use_case.rs  create_player_into_community_use_case.rs  create_team_into_community_use_case.rs  create_team_use_case.rs  delete_community_use_case.rs  delete_party_use_case.rs  delete_player_of_community_use_case.rs  end_party_use_case.rs  get_communities_use_case.rs  get_community_by_id_use_case.rs  get_parties_use_case.rs  get_party_by_id_use_case.rs  mod.rs
src/domain/: community.rs  mod.rs  party.rs  player.rs  team.rs  user.rs
src/infra/: mod.rs
src/infra/configs/: cors_config.rs  db_config.rs  envs_config.rs  listener_config.rs  mod.rs
src/infra/db/: community_repository.rs  mod.rs  party_repository.rs  player_repository.rs  team_repository.rs
src/presentation/: mod.rs  route.rs
src/presentation/dtos/: add_player_into_community_dto.rs  add_players_into_team_dto.rs  add_team_into_community_dto.rs  create_community_dto.rs  create_party_dto.rs  create_team_dto.rs  mod.rs  (+3 more)
src/shared/: api_error.rs  api_response.rs  date_time.rs  mod.rs  state.rs  validate_dto.rs
(+5 files in other folders)
