[package]
edition = "2024"
name = "game_gc_rust"
version = "0.1.0"

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
axum = {version = "0.8.3", features = ["json", "macros"]}
chrono = "0.4.41"
dotenvy = "0.15"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
sqlx = {version = "0.8.5", features = ["postgres", "runtime-tokio", "tls-native-tls", "migrate", "time"]}
time = { version = "0.3", features = ["serde"] }
tokio = {version = "1.34", features = ["full"]}
tower-http = {version = "0.6.2", features = ["cors"]}
